--- a/ta.html
+++ b/ta.html
@@ -3,9 +3,15 @@
 <head>
 <meta charset="UTF-8"
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>web app</title>
+<title>ระบบลงเวลา</title>
 </head>
 <body>
-    <iframe style="height: 100vh;" src="https://script.google.com/macros/s/AKfycbxvoi_zPqw9eVBfdSXDOccDpExyP8wBQ4s7J6jFaxLEJmeefVI7ciH8TgO7iB1SNwUi/exec?p=query" frameborder="0" width="100%" height="100%"></iframe>
+    <iframe style="height: 100vh;" src="https://script.google.com/macros/s/AKfycbxvoi_zPqw9eVBfdSXDOccDpExyP8wBQ4s7J6jFaxLEJmeefVI7ciH8TgO7iB1SNwUi/exec?p=query" 
+        frameborder="0" 
+        scrolling="no"
+        width="100%" 
+        height="100%">
+    </iframe>
 </body>
+
 </html>
