--- a/ta.html
+++ b/ta.html
@@ -3,7 +3,8 @@
 <head>
 <meta charset="UTF-8"
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>ระบบลงเวลา</title>
+<title>Employee Dashboard</title>
+<link rel="icon" href="favicon.ico" type="image/x-icon">
 </head>
 <body>
     <iframe style="height: 100vh;" src="https://script.google.com/macros/s/AKfycbxbIq4DfMQIuwmj6rHqqe738DylrCVK50ERatYvmVCERoxE3OLV2CvIdcenHXiyK39m/exec?p=query" 
@@ -15,4 +16,5 @@
 </body>
 
 </html>
+
 
