--- a/ta.html
+++ b/ta.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Employee Dashboard</title>
-<link rel="icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="https://github.com/Thamanoonni/ta/blob/main/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <iframe style="height: 100vh;" src="https://script.google.com/macros/s/AKfycbxbIq4DfMQIuwmj6rHqqe738DylrCVK50ERatYvmVCERoxE3OLV2CvIdcenHXiyK39m/exec?p=query" 
@@ -16,5 +16,6 @@
 </body>
 
 </html>
+
 
 
