--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 <meta charset="UTF-8"
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>S.P.S TA</title>
-<link rel="icon" href="favicon.ico" type="image/x-icon">
+<link rel="icon" href="https://github.com/Thamanoonni/ta/blob/main/favicon.ico" type="image/x-icon">
 </head>
 <body>
     <iframe style="height: 100vh;" src="https://script.google.com/macros/s/AKfycbxbIq4DfMQIuwmj6rHqqe738DylrCVK50ERatYvmVCERoxE3OLV2CvIdcenHXiyK39m/exec" frameborder="0" width="100%" height="100%"></iframe>
 </body>
 
 </html>
+
 
 
