--- a/ta.html
+++ b/ta.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8"
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Employee Dashboard</title>
+<title>SPS HR Dashboard</title>
 <link rel="icon" href="https://github.com/Thamanoonni/ta/blob/main/favicon.ico" type="image/x-icon">
 </head>
 <body>
@@ -16,6 +16,7 @@
 </body>
 
 </html>
+
 
 
 
