--- a/ta.html
+++ b/ta.html
@@ -2,9 +2,13 @@
 <html lang="th">
 <head>
 <meta charset="UTF-8"
+<base target="_top">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>SPS HR Dashboard</title>
+<title>Employee Dashboard</title>
 <link rel="icon" href="https://github.com/Thamanoonni/ta/blob/main/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="https://github.com/Thamanoonni/ta/blob/main/favicon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" href="https://github.com/Thamanoonni/ta/blob/main/favicon.ico">
+<meta name="theme-color" content="#0d6efd">
 </head>
 <body>
     <iframe style="height: 100vh;" src="https://script.google.com/macros/s/AKfycbxbIq4DfMQIuwmj6rHqqe738DylrCVK50ERatYvmVCERoxE3OLV2CvIdcenHXiyK39m/exec?p=query" 
@@ -16,6 +20,7 @@
 </body>
 
 </html>
+
 
 
 
