--- a/ta.html
+++ b/ta.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="th">
 <head>
-<meta charset="UTF-8"
+<meta charset="UTF-8">
 <base target="_top">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Employee Dashboard</title>
@@ -20,6 +20,7 @@
 </body>
 
 </html>
+
 
 
 
