--- a/index.html
+++ b/index.html
@@ -6,9 +6,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>S.P.S TA</title>
 
-<link rel="icon" href="https://github.com/Thamanoonni/ta/blob/main/favicon.ico" type="image/x-icon">
-<link rel="shortcut icon" href="https://github.com/Thamanoonni/ta/blob/main/favicon.ico" type="image/x-icon">
-<link rel="apple-touch-icon" href="https://github.com/Thamanoonni/ta/blob/main/favicon.ico">
+<link rel="icon" href="https://thamanoonni.github.io/ta/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="https://thamanoonni.github.io/ta/favicon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" href="https://thamanoonni.github.io/ta/favicon.ico">
 <meta name="theme-color" content="#0d6efd">
 </head>
 <body>
@@ -16,6 +16,7 @@
 </body>
 
 </html>
+
 
 
 
