--- a/ta.html
+++ b/ta.html
@@ -5,9 +5,9 @@
 <base target="_top">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <title>Employee Dashboard</title>
-<link rel="icon" href="https://github.com/Thamanoonni/ta/blob/main/favicon.ico" type="image/x-icon">
-<link rel="shortcut icon" href="https://github.com/Thamanoonni/ta/blob/main/favicon.ico" type="image/x-icon">
-<link rel="apple-touch-icon" href="https://github.com/Thamanoonni/ta/blob/main/favicon.ico">
+<link rel="icon" href="https://thamanoonni.github.io/ta/favicon.ico" type="image/x-icon">
+<link rel="shortcut icon" href="https://thamanoonni.github.io/ta/favicon.ico" type="image/x-icon">
+<link rel="apple-touch-icon" href="https://thamanoonni.github.io/ta/favicon.ico">
 <meta name="theme-color" content="#0d6efd">
 </head>
 <body>
@@ -20,6 +20,7 @@
 </body>
 
 </html>
+
 
 
 
