--- a/ta.html
+++ b/ta.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <base target="_top">
 <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-<title>Employee Dashboard</title>
+<title>HR Dashboard</title>
 <link rel="icon" href="https://thamanoonni.github.io/ta/favicon.ico" type="image/x-icon">
 <link rel="shortcut icon" href="https://thamanoonni.github.io/ta/favicon.ico" type="image/x-icon">
 <link rel="apple-touch-icon" href="https://thamanoonni.github.io/ta/favicon.ico">
@@ -20,6 +20,7 @@
 </body>
 
 </html>
+
 
 
 
