--- a/index.html
+++ b/index.html
@@ -3,18 +3,38 @@
 <head>
 <meta charset="UTF-8">
 <base target="_top">
-<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 <title>S.P.S TA</title>
 
-<link rel="icon" href="https://thamanoonni.github.io/ta/favicon.ico" type="image/x-icon">
-<link rel="shortcut icon" href="https://thamanoonni.github.io/ta/favicon.ico" type="image/x-icon">
-<link rel="apple-touch-icon" href="https://thamanoonni.github.io/ta/favicon.ico">
+<link rel="manifest" href="manifest.json">
+
+<link rel="icon" type="image/png" href="https://thamanoonni.github.io/ta/icon.png">
+<link rel="apple-touch-icon" href="https://thamanoonni.github.io/ta/icon.png">
+
 <meta name="theme-color" content="#0d6efd">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+<style>
+    /* ปรับแต่งให้เต็มจอจริงๆ ไม่มีขอบ */
+    body, html {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+    }
+    iframe {
+        border: none;
+        width: 100%;
+        height: 100%;
+        display: block; /* แก้ปัญหาขอบขาวด้านล่าง */
+    }
+</style>
 </head>
 <body>
-    <iframe style="height: 100vh;" src="https://script.google.com/macros/s/AKfycbxbIq4DfMQIuwmj6rHqqe738DylrCVK50ERatYvmVCERoxE3OLV2CvIdcenHXiyK39m/exec" frameborder="0" width="100%" height="100%"></iframe>
+    <iframe src="https://script.google.com/macros/s/AKfycbxbIq4DfMQIuwmj6rHqqe738DylrCVK50ERatYvmVCERoxE3OLV2CvIdcenHXiyK39m/exec" allow="geolocation; camera; microphone"></iframe>
 </body>
-
 </html>
 
 
