--- a/tamobile.html
+++ b/tamobile.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
 <title>S.P.S TA</title>
 
-<link rel="manifest" href="manifest.json">
+<link rel="manifest" href="manifest1.json">
 
 <link rel="icon" type="image/png" href="https://thamanoonni.github.io/ta/icon.png">
 <link rel="apple-touch-icon" href="https://thamanoonni.github.io/ta/icon.png">
@@ -35,4 +35,5 @@
 <body>
     <iframe src="https://script.google.com/macros/s/AKfycbwippJEFMsF4Mkpa_72nexdFykWVFV2YZXAjMsjOx7OvNdsczXePSEr0QKLH5M5lM0z/exec?p=query"></iframe>
 </body>
+
 </html>
