--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta name="theme-color" content="#0d6efd">
 <meta name="apple-mobile-web-app-capable" content="yes">
 <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-
+<script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 <style>
     /* ปรับแต่งให้เต็มจอจริงๆ ไม่มีขอบ */
     body, html {
@@ -80,6 +80,7 @@
 </script>    
 </body>
 </html>
+
 
 
 
