--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       // สร้างปุ่มติดตั้งลอยขึ้นมา หรือ แทรกในหน้า Login
       // ตัวอย่าง: ใช้ SweetAlert ที่ท่านมีอยู่แล้ว
       Swal.fire({
-          title: 'ติดตั้งแอป',
+          title: 'ติดตั้งแอป (Office)',
           text: 'เพื่อความสะดวกในการใช้งานครั้งต่อไป',
           icon: 'info',
           showCancelButton: true,
@@ -80,6 +80,7 @@
 </script>    
 </body>
 </html>
+
 
 
 
