--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <base target="_top">
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-<title>S.P.S TA</title>
+<title>Wisdom TA</title>
 
 <link rel="manifest" href="manifest.json">
 
@@ -80,6 +80,7 @@
 </script>    
 </body>
 </html>
+
 
 
 
