--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 
 <link rel="manifest" href="manifest.json">
 
-<link rel="icon" type="image/png" href="https://thamanoonni.github.io/ta/icon.png">
-<link rel="apple-touch-icon" href="https://thamanoonni.github.io/ta/icon.png">
+<link rel="icon" type="image/png" href="https://thamanoonni.github.io/ta/icon-wda.png">
+<link rel="apple-touch-icon" href="https://thamanoonni.github.io/ta/icon-wda.png">
 
 <meta name="theme-color" content="#0d6efd">
 <meta name="apple-mobile-web-app-capable" content="yes">
@@ -80,6 +80,7 @@
 </script>    
 </body>
 </html>
+
 
 
 
