--- a/index.html
+++ b/index.html
@@ -553,7 +553,7 @@
   const API_URL = "https://script.google.com/macros/s/AKfycbwYa587lK3EQ39Do1k-Xoy97rmYdI2PS4koJDAixkO9zw6S2YqPLO6eVix9l-IEp2bC/exec" ; 
 
   const APP_CONFIG = {
-      COMPANY_NAME: 'วิสดอม ออโต้พาร์ท',
+      COMPANY_NAME: 'วิสดอม ออโต้พาร์ท จำกัด',
       
       // 1. โลโก้เล็ก (Header หน้า Dashboard)
       LOGO_HEADER: 'https://drive.google.com/thumbnail?id=1RbfQoTcWEU6Y4USFIV9XjmAjgpx87hvA&sz=w1000', 
