--- a/install.html
+++ b/install.html
@@ -70,9 +70,9 @@
 <body>
 
     <div class="container" id="mainCard">
-        <img src="https://thamanoonni.github.io/ta/icon.png" class="logo">
+        <img src="https://thamanoonni.github.io/ta/icon-wda.png" class="logo">
         <h2>ติดตั้งแอปพลิเคชัน</h2>
-        <p>S.P.S Intertech Portal<br>เพื่อความสะดวกในการเข้าใช้งาน</p>
+        <p>Wisdom Time Attendance Portal<br>เพื่อความสะดวกในการเข้าใช้งาน</p>
         
         <button id="installBtn" class="btn btn-install" onclick="doInstall()">
             ติดตั้งลงเครื่อง
