--- a/index.html
+++ b/index.html
@@ -372,7 +372,7 @@
           </div>
       </div>
     
-      <div id="userPayslipSection" class="hidden px-0 fade-in">
+      <div id="userPayslipSection" class="hidden px-0 fade-in mt-4">
           <div id="payslipCard" class="card shadow-sm border-0 hidden mx-2 mb-3">
               <div class="bg-primary text-white p-2 rounded-top d-flex justify-content-between align-items-start">
                   <div>
