--- a/install.html
+++ b/install.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>Install S.P.S Intertech</title>
+    <title>Install Wisdom TA Portal</title>
     
     <link rel="manifest" href="manifest.json">
     <link rel="icon" type="image/png" href="https://thamanoonni.github.io/ta/icon.png">
@@ -171,4 +171,5 @@
         });
     </script>
 </body>
+
 </html>
