--- a/index.html
+++ b/index.html
@@ -2549,7 +2549,7 @@ async function detectFaceLoop() {
 
   // --- 1. หมวดหมู่ Column อ้างอิงจาก CSV ---
   const incomeKeys = ['เงินเดือนรับ', 'ค่าตำแหน่ง', 'ค่าเช่าบ้าน', 'ค่ากะ', 'ค่าฝีมือ', 'ค่าครองชีพ', 'เบี้ยยังชีพ', 'รายได้อื่นๆ', 'เบี้ยขยัน', 'ot1 amt', 'ot15 amt', 'ot2 amt', 'ot3 amt'];
-  const deductKeys = ['ค่าฌาปนกิจ', 'ประกันสังคม', 'หักสาย', 'ภาษี'];
+  const deductKeys = ['ฌาปนกิจญาติ', 'ประกันสังคม', 'หักสาย', 'ภาษี'];
 
   // --- 2. ฟังก์ชันเพิ่มลงในระบบ Navigation (openApp) ---
   // นำ 'adminImportPayslipSection' และ 'userPayslipSection' ไปเพิ่มใน Array allSections ในฟังก์ชัน openApp และ showPortal ด้วยนะครับ
