--- a/index.html
+++ b/index.html
@@ -2524,7 +2524,7 @@ async function detectFaceLoop() {
 
   // --- 1. หมวดหมู่ Column อ้างอิงจาก CSV ---
   // เพิ่ม ค่าประสบการณ์, ค่าอาหาร, ค่าน้ำมัน ต่อท้ายเบี้ยขยัน
-  const incomeKeys = ['เงินเดือนรับ', 'ค่าตำแหน่ง', 'ค่าเช่าบ้าน', 'ค่ากะ', 'ค่าฝีมือ', 'ค่าครองชีพ', 'เบี้ยยังชีพ', 'รายได้อื่นๆ', 'เบี้ยขยัน', 'ค่าประสบการณ์', 'ค่าอาหาร', 'ค่าน้ำมัน','ฌปนกิจญาติ', 'ot1 amt', 'ot15 amt', 'ot2 amt', 'ot3 amt'];
+  const incomeKeys = ['เงินเดือนรับ', 'ค่าตำแหน่ง', 'ค่าเช่าบ้าน', 'ค่ากะ', 'ค่าฝีมือ', 'ค่าครองชีพ', 'เบี้ยยังชีพ', 'รายได้อื่นๆ', 'เบี้ยขยัน', 'ค่าประสบการณ์', 'ค่าอาหาร', 'ค่าน้ำมัน','ฌปนกิจรับ', 'ot1 amt', 'ot15 amt', 'ot2 amt', 'ot3 amt'];
   const deductKeys = ['ฌาปนกิจญาติ', 'ประกันสังคม', 'หักสาย', 'ภาษี'];
   // --- 2. ฟังก์ชันเพิ่มลงในระบบ Navigation (openApp) ---
   // นำ 'adminImportPayslipSection' และ 'userPayslipSection' ไปเพิ่มใน Array allSections ในฟังก์ชัน openApp และ showPortal ด้วยนะครับ
